apply .env for backend and config for frontend

--- a/my-note-keeper/client/index.html
+++ b/my-note-keeper/client/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d1e074c3fa.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
+    <script src="script/config.js"></script>
     <script src="script/noteTemplate.js"></script>
     <script src="script/fetchNotes.js"></script>
     <script src="script/addNote.js"></script>
     <script src="script/deleteNote.js"></script>
     <script src="script/updateNote.js"></script>
-    <!-- <script src="script/loadPages.js"></script> -->
     <title>My Note Keeper</title>
 </head>
 <body>
