--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script/operations.js"></script>
-    <script src="script/UITest.js"></script>
+    <script src="script/calculator.js"></script>
     <title>Simple Calculator</title>
 </head>
 <body>
